[PBAR, FIX] Supports removing progress bar, and fixes a minor bug in data instance loading

--- a/GA4mTSP.ipynb
+++ b/GA4mTSP.ipynb
@@ -1,6 +1,537 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Genetic Algorithm for Multiple Traveling Salesman Problem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. To run baseline on the `mtsp51` instance:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--> Running ID = 1\n",
+      "> Loading cities from instances/mtsp51.txt\n",
+      "\t>> 51 cities in total to be loaded\n",
+      "> 51 cities loaded from instances/mtsp51.txt\n",
+      "> Initial distance: 1521.082887\n",
+      "> Starting running GA.\n",
+      "\t>> cities = 51, salesmen = 5\n",
+      "\t>> Generations = 1000, PopulationSize = 100, TournamentSize = 10\n",
+      "# Generation Distance\n",
+      "% 1 1451.350047\n",
+      "% 2 1388.350427\n",
+      "% 3 1412.765884\n",
+      "% 4 1349.557312\n",
+      "% 5 1325.082669\n",
+      "% 6 1326.746011\n",
+      "% 7 1316.406563\n",
+      "% 8 1308.374864\n",
+      "% 9 1283.669436\n",
+      "% 10 1271.280361\n",
+      "% 11 1287.033294\n",
+      "% 12 1282.966953\n",
+      "% 13 1272.562129\n",
+      "% 14 1282.915264\n",
+      "% 15 1271.437048\n",
+      "% 16 1291.302217\n",
+      "% 17 1231.662903\n",
+      "% 18 1216.676691\n",
+      "% 19 1208.280561\n",
+      "% 20 1166.643655\n",
+      "% 21 1158.040103\n",
+      "% 22 1166.030063\n",
+      "% 23 1189.969840\n",
+      "% 24 1154.835447\n",
+      "% 25 1159.895644\n",
+      "% 26 1132.529268\n",
+      "% 27 1119.774552\n",
+      "% 28 1132.623487\n",
+      "% 29 1165.721156\n",
+      "% 30 1080.944181\n",
+      "% 31 1096.719813\n",
+      "% 32 1116.688974\n",
+      "% 33 1095.410500\n",
+      "% 34 1100.327673\n",
+      "% 35 1119.066651\n",
+      "% 36 1115.627354\n",
+      "% 37 1108.958185\n",
+      "% 38 1145.027786\n",
+      "% 39 1098.972416\n",
+      "% 40 1097.361363\n",
+      "% 41 1067.513046\n",
+      "% 42 1055.337321\n",
+      "% 43 1090.025583\n",
+      "% 44 1047.644906\n",
+      "% 45 1076.889063\n",
+      "% 46 1056.445267\n",
+      "% 47 1038.262354\n",
+      "% 48 1065.306575\n",
+      "% 49 1086.167626\n",
+      "% 50 1092.647341\n",
+      "% 51 1068.492039\n",
+      "% 52 1079.660156\n",
+      "% 53 1037.634181\n",
+      "% 54 1043.203020\n",
+      "% 55 1073.935814\n",
+      "% 56 1074.796617\n",
+      "% 57 1022.712516\n",
+      "% 58 1044.517465\n",
+      "% 59 1037.505882\n",
+      "% 60 1017.292608\n",
+      "% 61 1015.054097\n",
+      "% 62 1015.014858\n",
+      "% 63 1032.569742\n",
+      "% 64 1097.220843\n",
+      "% 65 1047.196077\n",
+      "% 66 1038.028159\n",
+      "% 67 1018.137958\n",
+      "% 68 1044.429371\n",
+      "% 69 1013.247782\n",
+      "% 70 1042.314782\n",
+      "% 71 1051.701848\n",
+      "% 72 1070.104268\n",
+      "% 73 1058.184159\n",
+      "% 74 1069.915302\n",
+      "% 75 1066.268036\n",
+      "% 76 1098.139370\n",
+      "% 77 1050.940831\n",
+      "% 78 1054.493928\n",
+      "% 79 1047.572879\n",
+      "% 80 1048.378412\n",
+      "% 81 1044.036634\n",
+      "% 82 1073.445767\n",
+      "% 83 1038.349233\n",
+      "% 84 1021.541920\n",
+      "% 85 1064.237246\n",
+      "% 86 1023.872246\n",
+      "% 87 1034.932696\n",
+      "% 88 1030.864663\n",
+      "% 89 1055.409170\n",
+      "% 90 1036.322799\n",
+      "% 91 1068.415380\n",
+      "% 92 1053.855633\n",
+      "% 93 1057.492857\n",
+      "% 94 1029.362733\n",
+      "% 95 1024.887005\n",
+      "% 96 1013.950048\n",
+      "% 97 1005.391276\n",
+      "% 98 1028.937644\n",
+      "% 99 1057.763255\n",
+      "% 100 1012.136720\n",
+      "% 101 1012.953388\n",
+      "% 102 1059.027736\n",
+      "% 103 1047.582885\n",
+      "% 104 1015.185989\n",
+      "% 105 1009.777762\n",
+      "% 106 1012.061075\n",
+      "% 107 1010.363317\n",
+      "% 108 1030.331988\n",
+      "% 109 1002.620405\n",
+      "% 110 1010.124299\n",
+      "% 111 989.924245\n",
+      "% 112 1012.878367\n",
+      "% 113 994.221713\n",
+      "% 114 999.257008\n",
+      "% 115 956.734351\n",
+      "% 116 968.276700\n",
+      "% 117 1022.557921\n",
+      "% 118 1019.171389\n",
+      "% 119 1023.997454\n",
+      "% 120 1002.080897\n",
+      "% 121 1045.967500\n",
+      "% 122 1016.837882\n",
+      "% 123 1044.341709\n",
+      "% 124 1023.835667\n",
+      "% 125 1026.723738\n",
+      "% 126 1065.191540\n",
+      "% 127 1055.066877\n",
+      "% 128 1069.249102\n",
+      "% 129 1106.578186\n",
+      "% 130 1086.271697\n",
+      "% 131 1075.223930\n",
+      "% 132 1056.613121\n",
+      "% 133 1040.516064\n",
+      "% 134 1053.036701\n",
+      "% 135 1031.140389\n",
+      "% 136 1053.824921\n",
+      "% 137 1014.278555\n",
+      "% 138 963.672406\n",
+      "% 139 1014.025534\n",
+      "% 140 966.227486\n",
+      "% 141 995.246879\n",
+      "% 142 983.824264\n",
+      "% 143 969.031216\n",
+      "% 144 1010.574341\n",
+      "% 145 991.244632\n",
+      "% 146 1004.698572\n",
+      "% 147 1002.153685\n",
+      "% 148 1008.670345\n",
+      "% 149 1002.577219\n",
+      "% 150 978.882019\n",
+      "% 151 964.846106\n",
+      "% 152 984.404509\n",
+      "% 153 1022.356783\n",
+      "% 154 956.307881\n",
+      "% 155 981.528356\n",
+      "% 156 971.473903\n",
+      "% 157 1013.336264\n",
+      "% 158 1044.675081\n",
+      "% 159 987.601265\n",
+      "% 160 996.554550\n",
+      "% 161 1011.238814\n",
+      "% 162 1013.094612\n",
+      "% 163 1021.168965\n",
+      "% 164 1026.404685\n",
+      "% 165 1017.786604\n",
+      "% 166 1038.331454\n",
+      "% 167 1028.414487\n",
+      "% 168 1052.202766\n",
+      "% 169 1063.935304\n",
+      "% 170 1037.458212\n",
+      "% 171 1018.804817\n",
+      "% 172 1097.965084\n",
+      "% 173 1060.850778\n",
+      "% 174 1091.993734\n",
+      "% 175 1084.850078\n",
+      "% 176 1065.202883\n",
+      "% 177 1057.712576\n",
+      "% 178 1036.058669\n",
+      "% 179 992.917095\n",
+      "% 180 1022.231704\n",
+      "% 181 1051.467033\n",
+      "% 182 1067.050741\n",
+      "% 183 1081.435541\n",
+      "% 184 1049.719237\n",
+      "% 185 1029.980854\n",
+      "% 186 1000.435170\n",
+      "% 187 967.842996\n",
+      "% 188 972.276839\n",
+      "% 189 1006.737327\n",
+      "% 190 1012.847902\n",
+      "% 191 1020.200373\n",
+      "% 192 1035.752709\n",
+      "% 193 1061.845254\n",
+      "% 194 1049.085065\n",
+      "% 195 1039.381615\n",
+      "% 196 1025.917470\n",
+      "% 197 1007.915794\n",
+      "% 198 1045.414372\n",
+      "% 199 1063.525281\n",
+      "% 200 1043.379824\n",
+      "% 201 1062.653106\n",
+      "% 202 1010.373332\n",
+      "% 203 1007.181177\n",
+      "% 204 999.916292\n",
+      "> Finished 204 generations with 1022395 distance calculations. GA Runtime = 18.8473 sec\n",
+      "> Final distance: 956.307881\n",
+      "> Final Route:\n",
+      "Truck 0 [len = 15]: 0 --> 9 --> 3 --> 41 --> 12 --> 40 --> 39 --> 18 --> 23 --> 24 --> 17 --> 13 --> 5 --> 45 --> 10\n",
+      "Truck 1 [len = 15]: 0 --> 11 --> 36 --> 14 --> 16 --> 38 --> 4 --> 21 --> 30 --> 27 --> 50 --> 33 --> 49 --> 15 --> 47\n",
+      "Truck 2 [len = 5]: 0 --> 35 --> 28 --> 6 --> 25\n",
+      "Truck 3 [len = 9]: 0 --> 46 --> 44 --> 29 --> 8 --> 48 --> 32 --> 43 --> 37\n",
+      "Truck 4 [len = 11]: 0 --> 22 --> 42 --> 26 --> 20 --> 2 --> 34 --> 19 --> 31 --> 1 --> 7\n",
+      "> Generation - Distance curve saved to fig/20211216_02_23_28.png.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python main.py -d instances/mtsp51.txt -ga baseline -so 1 -m 5 -g 1000 -p 100 -dc 20000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--> Running ID = 1\n",
+      "> Loading cities from instances/pr226.txt\n",
+      "\t>> 226 cities in total to be loaded\n",
+      "> 226 cities loaded from instances/pr226.txt\n",
+      "> Initial distance: 1628419.641732\n",
+      "> Starting running GA.\n",
+      "\t>> cities = 226, salesmen = 5\n",
+      "\t>> Generations = 1000, PopulationSize = 100, TournamentSize = 10\n",
+      "# Generation Distance\n",
+      "% 1 1601570.356034\n",
+      "% 2 1580326.404687\n",
+      "% 3 1565064.507308\n",
+      "% 4 1571967.344286\n",
+      "% 5 1559627.041023\n",
+      "% 6 1542794.824623\n",
+      "% 7 1532044.339090\n",
+      "% 8 1525562.736147\n",
+      "% 9 1512394.644665\n",
+      "% 10 1483473.132261\n",
+      "% 11 1459555.032887\n",
+      "% 12 1464293.678709\n",
+      "% 13 1452143.550664\n",
+      "% 14 1438440.860622\n",
+      "% 15 1423619.271173\n",
+      "% 16 1424465.966078\n",
+      "% 17 1407231.403708\n",
+      "% 18 1405349.544911\n",
+      "% 19 1405086.165629\n",
+      "% 20 1395261.277775\n",
+      "% 21 1382199.948275\n",
+      "% 22 1366189.002539\n",
+      "% 23 1368526.422904\n",
+      "% 24 1372033.023496\n",
+      "% 25 1357356.200949\n",
+      "% 26 1349006.489564\n",
+      "% 27 1363071.158975\n",
+      "% 28 1341454.237393\n",
+      "% 29 1330920.764117\n",
+      "% 30 1327669.342668\n",
+      "% 31 1327901.007519\n",
+      "% 32 1313673.565881\n",
+      "% 33 1313308.944583\n",
+      "% 34 1321126.996991\n",
+      "% 35 1315191.321403\n",
+      "% 36 1301124.061693\n",
+      "% 37 1309551.886389\n",
+      "% 38 1306173.541215\n",
+      "% 39 1311416.201288\n",
+      "% 40 1292243.080420\n",
+      "% 41 1288353.821276\n",
+      "% 42 1274468.074829\n",
+      "% 43 1260036.121163\n",
+      "% 44 1248251.062983\n",
+      "% 45 1245046.804601\n",
+      "% 46 1242440.893897\n",
+      "% 47 1228260.974521\n",
+      "% 48 1233126.496596\n",
+      "% 49 1235169.109404\n",
+      "% 50 1233098.191108\n",
+      "% 51 1244268.411868\n",
+      "% 52 1221582.720568\n",
+      "% 53 1208371.767839\n",
+      "% 54 1186409.564202\n",
+      "% 55 1185172.298938\n",
+      "% 56 1180033.695980\n",
+      "% 57 1178716.328570\n",
+      "% 58 1177995.022804\n",
+      "% 59 1168269.835458\n",
+      "% 60 1163029.099244\n",
+      "% 61 1161204.170503\n",
+      "% 62 1150815.498880\n",
+      "% 63 1140750.979096\n",
+      "% 64 1144209.597804\n",
+      "% 65 1144117.686228\n",
+      "% 66 1130461.283817\n",
+      "% 67 1140643.881442\n",
+      "% 68 1128349.135256\n",
+      "% 69 1118759.741484\n",
+      "% 70 1100540.245917\n",
+      "% 71 1103120.323806\n",
+      "% 72 1091400.911743\n",
+      "% 73 1084994.801909\n",
+      "% 74 1078731.473901\n",
+      "% 75 1099245.614125\n",
+      "% 76 1077691.134525\n",
+      "% 77 1083916.092485\n",
+      "% 78 1071502.233444\n",
+      "% 79 1049877.842671\n",
+      "% 80 1049149.627259\n",
+      "% 81 1044771.355164\n",
+      "% 82 1042768.669525\n",
+      "% 83 1026786.980275\n",
+      "% 84 1005395.068642\n",
+      "% 85 1033583.626411\n",
+      "% 86 1019920.859908\n",
+      "% 87 1021468.288965\n",
+      "% 88 1031453.559453\n",
+      "% 89 1036203.651881\n",
+      "% 90 1026983.814966\n",
+      "% 91 1038467.968573\n",
+      "% 92 1024163.554767\n",
+      "% 93 1035518.946234\n",
+      "% 94 1031217.136767\n",
+      "% 95 1015000.861704\n",
+      "% 96 1018780.697796\n",
+      "% 97 1023972.767422\n",
+      "% 98 1008712.417141\n",
+      "% 99 1007466.722157\n",
+      "% 100 1017067.513208\n",
+      "% 101 989238.353988\n",
+      "% 102 1004991.964944\n",
+      "% 103 1000284.873354\n",
+      "% 104 1008734.843129\n",
+      "% 105 1007332.540251\n",
+      "% 106 1009013.867211\n",
+      "% 107 1004674.279289\n",
+      "% 108 1001157.572306\n",
+      "% 109 1016683.192965\n",
+      "% 110 1015864.988215\n",
+      "% 111 1019934.247027\n",
+      "% 112 1008014.783758\n",
+      "% 113 1009482.918750\n",
+      "% 114 1007784.310475\n",
+      "% 115 1015453.754630\n",
+      "% 116 1031147.313677\n",
+      "% 117 1040444.089284\n",
+      "% 118 1029396.962725\n",
+      "% 119 1029965.794597\n",
+      "% 120 1020072.901543\n",
+      "% 121 1020072.901543\n",
+      "% 122 1014973.494358\n",
+      "% 123 1014288.638587\n",
+      "% 124 1012732.243192\n",
+      "% 125 1006013.491585\n",
+      "% 126 1010880.363495\n",
+      "% 127 993348.135469\n",
+      "% 128 1011133.201845\n",
+      "% 129 1006235.105482\n",
+      "% 130 1001979.465824\n",
+      "% 131 1007172.709672\n",
+      "% 132 1004982.234510\n",
+      "% 133 1018757.206881\n",
+      "% 134 1015257.947298\n",
+      "% 135 1004921.570731\n",
+      "% 136 999834.610278\n",
+      "% 137 998369.396901\n",
+      "% 138 997922.433091\n",
+      "% 139 991521.203021\n",
+      "% 140 987193.464103\n",
+      "% 141 994940.279401\n",
+      "% 142 982944.825266\n",
+      "% 143 990976.337457\n",
+      "% 144 978265.279595\n",
+      "% 145 976849.618641\n",
+      "% 146 981101.855773\n",
+      "% 147 971819.843902\n",
+      "% 148 962042.828897\n",
+      "% 149 955503.690516\n",
+      "% 150 956622.158774\n",
+      "% 151 962521.213542\n",
+      "% 152 959070.510342\n",
+      "% 153 966126.780806\n",
+      "% 154 970736.665736\n",
+      "% 155 987429.499755\n",
+      "% 156 979416.437223\n",
+      "% 157 991097.016508\n",
+      "% 158 990925.206271\n",
+      "% 159 1000235.513143\n",
+      "% 160 977200.561033\n",
+      "% 161 984928.666017\n",
+      "% 162 1001535.007165\n",
+      "% 163 992287.797346\n",
+      "% 164 996185.371115\n",
+      "% 165 980455.248522\n",
+      "% 166 997678.741585\n",
+      "% 167 985944.592647\n",
+      "% 168 993146.856603\n",
+      "% 169 982023.157808\n",
+      "% 170 973929.173237\n",
+      "% 171 975212.441210\n",
+      "% 172 989453.687330\n",
+      "% 173 969889.400898\n",
+      "% 174 974165.385078\n",
+      "% 175 977432.669557\n",
+      "% 176 972916.713173\n",
+      "% 177 979268.153113\n",
+      "% 178 972465.350344\n",
+      "% 179 981868.214000\n",
+      "% 180 970422.861219\n",
+      "% 181 978609.950261\n",
+      "% 182 983885.695261\n",
+      "% 183 971814.403328\n",
+      "% 184 965475.064657\n",
+      "% 185 960285.868296\n",
+      "% 186 969088.088826\n",
+      "% 187 978208.984879\n",
+      "% 188 971128.864422\n",
+      "% 189 984907.577066\n",
+      "% 190 982995.127691\n",
+      "% 191 969105.911377\n",
+      "% 192 966276.743681\n",
+      "% 193 975492.964266\n",
+      "% 194 977082.498604\n",
+      "% 195 988527.116872\n",
+      "% 196 973998.205912\n",
+      "% 197 972065.006025\n",
+      "% 198 957982.488913\n",
+      "% 199 961260.566416\n",
+      "% 200 962987.084051\n",
+      "% 201 970297.163494\n",
+      "% 202 983058.976623\n",
+      "% 203 962630.043768\n",
+      "% 204 962301.281911\n",
+      "% 205 969404.449022\n",
+      "% 206 983296.707178\n",
+      "% 207 992360.020212\n",
+      "% 208 977201.150692\n",
+      "% 209 1004850.524850\n",
+      "% 210 982805.490703\n",
+      "% 211 995233.669062\n",
+      "% 212 981590.074696\n",
+      "% 213 989569.128317\n",
+      "% 214 988543.937306\n",
+      "% 215 982071.976810\n",
+      "% 216 998444.910880\n",
+      "% 217 990268.194459\n",
+      "> Finished 217 generations with 4536980 distance calculations. GA Runtime = 157.1617 sec\n",
+      "> Final distance: 955503.690516\n",
+      "> Final Route:\n",
+      "Truck 0 [len = 41]: 0 --> 171 --> 159 --> 164 --> 176 --> 156 --> 185 --> 178 --> 124 --> 122 --> 220 --> 203 --> 206 --> 208 --> 163 --> 188 --> 90 --> 42 --> 36 --> 29 --> 47 --> 100 --> 37 --> 30 --> 22 --> 209 --> 214 --> 219 --> 120 --> 85 --> 125 --> 126 --> 117 --> 69 --> 84 --> 81 --> 77 --> 59 --> 8 --> 6 --> 11\n",
+      "Truck 1 [len = 40]: 0 --> 14 --> 51 --> 49 --> 50 --> 116 --> 75 --> 217 --> 87 --> 147 --> 182 --> 41 --> 53 --> 222 --> 223 --> 224 --> 110 --> 135 --> 218 --> 129 --> 207 --> 165 --> 160 --> 145 --> 39 --> 40 --> 46 --> 99 --> 105 --> 212 --> 221 --> 201 --> 113 --> 2 --> 82 --> 68 --> 67 --> 107 --> 127 --> 106\n",
+      "Truck 2 [len = 80]: 0 --> 56 --> 155 --> 162 --> 20 --> 38 --> 21 --> 104 --> 91 --> 119 --> 202 --> 189 --> 181 --> 158 --> 150 --> 152 --> 187 --> 157 --> 167 --> 96 --> 26 --> 24 --> 35 --> 48 --> 103 --> 136 --> 33 --> 52 --> 64 --> 62 --> 109 --> 205 --> 121 --> 133 --> 139 --> 173 --> 175 --> 89 --> 27 --> 92 --> 138 --> 143 --> 74 --> 12 --> 1 --> 71 --> 66 --> 70 --> 144 --> 149 --> 102 --> 78 --> 10 --> 17 --> 31 --> 137 --> 197 --> 134 --> 204 --> 34 --> 79 --> 60 --> 58 --> 25 --> 196 --> 118 --> 199 --> 128 --> 195 --> 198 --> 172 --> 130 --> 200 --> 193 --> 192 --> 111 --> 115 --> 132 --> 97 --> 216\n",
+      "Truck 3 [len = 37]: 0 --> 54 --> 184 --> 61 --> 7 --> 55 --> 32 --> 86 --> 153 --> 98 --> 191 --> 170 --> 154 --> 161 --> 148 --> 93 --> 180 --> 194 --> 190 --> 225 --> 123 --> 213 --> 210 --> 179 --> 168 --> 166 --> 183 --> 177 --> 141 --> 186 --> 95 --> 19 --> 28 --> 108 --> 73 --> 76 --> 5\n",
+      "Truck 4 [len = 32]: 0 --> 13 --> 57 --> 15 --> 83 --> 211 --> 9 --> 4 --> 112 --> 114 --> 16 --> 80 --> 72 --> 3 --> 131 --> 151 --> 174 --> 169 --> 146 --> 88 --> 43 --> 44 --> 101 --> 140 --> 18 --> 65 --> 63 --> 215 --> 45 --> 94 --> 142 --> 23\n",
+      "> Generation - Distance curve saved to fig/20211216_02_26_57.png.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python main.py -d instances/pr226.txt -ga baseline -so 1 -m 5 -g 1000 -p 100 -dc 20000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python [conda env:mtsp] *",
+   "language": "python",
+   "name": "conda-env-mtsp-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.12"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 4
 }
