[IPYNB, RES] Updates GA4mTSP.ipynb and results

--- a/GA4mTSP.ipynb
+++ b/GA4mTSP.ipynb
@@ -1654,13 +1654,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">>> Total independent runs = 30 <<<\n",
+      "------------------------------------------------------------------------------------------------------\n",
+      "Round 1\n",
+      "------------------------------------------------------------------------------------------------------\n",
+      "Round 2\n",
+      "------------------------------------------------------------------------------------------------------\n",
+      "Round 3\n",
+      "------------------------------------------------------------------------------------------------------\n",
+      "Round 4\n",
+      "------------------------------------------------------------------------------------------------------\n",
+      "Round 5\n",
+      "------------------------------------------------------------------------------------------------------\n",
+      "Round 6\n",
+      "------------------------------------------------------------------------------------------------------\n",
+      "Round 7\n",
+      "------------------------------------------------------------------------------------------------------\n",
+      "Round 8\n",
+      "------------------------------------------------------------------------------------------------------\n",
+      "Round 9\n",
+      "------------------------------------------------------------------------------------------------------\n",
+      "Round 10\n",
+      "------------------------------------------------------------------------------------------------------\n",
+      "Round 11\n",
+      "------------------------------------------------------------------------------------------------------\n",
+      "Round 12\n",
+      "------------------------------------------------------------------------------------------------------\n",
+      "Round 13\n",
+      "------------------------------------------------------------------------------------------------------\n",
+      "Round 14\n",
+      "------------------------------------------------------------------------------------------------------\n",
+      "Round 15\n",
+      "------------------------------------------------------------------------------------------------------\n",
+      "Round 16\n",
+      "------------------------------------------------------------------------------------------------------\n",
+      "Round 17\n",
+      "------------------------------------------------------------------------------------------------------\n",
+      "Round 18\n",
+      "------------------------------------------------------------------------------------------------------\n",
+      "Round 19\n",
+      "------------------------------------------------------------------------------------------------------\n",
+      "Round 20\n",
+      "------------------------------------------------------------------------------------------------------\n",
+      "Round 21\n",
+      "------------------------------------------------------------------------------------------------------\n",
+      "Round 22\n",
+      "------------------------------------------------------------------------------------------------------\n",
+      "Round 23\n",
+      "------------------------------------------------------------------------------------------------------\n",
+      "Round 24\n",
+      "------------------------------------------------------------------------------------------------------\n",
+      "Round 25\n",
+      "------------------------------------------------------------------------------------------------------\n",
+      "Round 26\n",
+      "------------------------------------------------------------------------------------------------------\n",
+      "Round 27\n",
+      "------------------------------------------------------------------------------------------------------\n",
+      "Round 28\n",
+      "------------------------------------------------------------------------------------------------------\n",
+      "Round 29\n",
+      "------------------------------------------------------------------------------------------------------\n",
+      "Round 30\n",
+      "------------------------------------------------------------------------------------------------------\n",
+      ">>> 30 runs all finished <<<\n"
+     ]
+    }
+   ],
    "source": [
-    "# !python runMultiple.py -d instances/mtsp51.txt -ga baseline -so 0 -m 5 -g 1000 -p 100 -dc 20000 -r 30"
+    "!python runMultiple.py -d instances/mtsp51.txt -ga baseline -so 0 -m 5 -g 1000 -p 100 -dc 20000 -r 30"
    ]
   },
   {
@@ -1688,13 +1758,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[935.259838, 931.553625, 936.604977, 916.21368, 911.51114, 921.76074, 913.963646, 908.636433, 922.938775, 946.991411, 917.352276, 898.459824, 883.544144, 908.959496, 913.476104, 937.03381, 951.133978, 879.216739, 914.875664, 933.946606, 909.424986, 927.623173, 912.488888, 917.45265, 898.19543, 932.266037, 934.032096, 911.03959, 913.493121, 911.405061]\n"
+     ]
+    }
+   ],
    "source": [
     "from util import extractFinalDistListFromLogDir\n",
     "\n",
-    "# logDir = 'log/mtsp51_baseline_30_5_1000_100_10_20211216_14_54_04'\n",
+    "# logDir = 'res/baseline/log/mtsp51_baseline_30_5_1000_100_10_20211216_16_12_09'\n",
     "# resListBaseline = extractFinalDistListFromLogDir(log_dir=logDir)\n",
     "\n",
     "# print(resListBaseline)"
@@ -1731,7 +1809,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:mtsp] *",
+   "display_name": "Python [conda env:mtsp]",
    "language": "python",
    "name": "conda-env-mtsp-py"
   },
