[IPYNB] Updates ipynb

--- a/GA4mTSP.ipynb
+++ b/GA4mTSP.ipynb
@@ -1544,98 +1544,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Run xxx on the `mtsp51` instance:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# !python main.py -d instances/mtsp51.txt -ga myAlgo -so 1 -m 5 -g 1000 -p 100 -dc 20000"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "2. `mtsp100`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !python main.py -d instances/mtsp100.txt -ga myAlgo -so 1 -m 5 -g 1000 -p 100 -dc 20000"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "3. `mtsp150`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !python main.py -d instances/mtsp150.txt -ga myAlgo -so 1 -m 5 -g 1000 -p 100 -dc 20000"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "4. `pr76`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !python main.py -d instances/pr76.txt -ga myAlgo -so 1 -m 5 -g 1000 -p 100 -dc 20000"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "5. `pr152`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !python main.py -d instances/pr152.txt -ga myAlgo -so 1 -m 5 -g 1000 -p 100 -dc 20000"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "6. `pr226`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !python main.py -d instances/pr226.txt -ga myAlgo -so 1 -m 5 -g 1000 -p 100 -dc 20000"
+    "Check another file: xxx.ipynb"
    ]
   },
   {
@@ -1753,29 +1662,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Extract result distances from a log folder"
+    "2. Extract result distances and run time from a log folder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[935.259838, 931.553625, 936.604977, 916.21368, 911.51114, 921.76074, 913.963646, 908.636433, 922.938775, 946.991411, 917.352276, 898.459824, 883.544144, 908.959496, 913.476104, 937.03381, 951.133978, 879.216739, 914.875664, 933.946606, 909.424986, 927.623173, 912.488888, 917.45265, 898.19543, 932.266037, 934.032096, 911.03959, 913.493121, 911.405061]\n"
+      "[935.259838, 931.553625, 936.604977, 916.21368, 911.51114, 921.76074, 913.963646, 908.636433, 922.938775, 946.991411, 917.352276, 898.459824, 883.544144, 908.959496, 913.476104, 937.03381, 951.133978, 879.216739, 914.875664, 933.946606, 909.424986, 927.623173, 912.488888, 917.45265, 898.19543, 932.266037, 934.032096, 911.03959, 913.493121, 911.405061]\n",
+      "[17.5474, 17.1401, 17.7111, 18.1373, 18.3399, 17.6038, 17.7031, 17.6792, 17.7911, 17.345, 18.2713, 17.4, 17.8005, 17.8227, 17.3408, 17.7979, 17.4147, 17.2162, 16.9218, 17.7955, 17.8355, 18.755, 17.6441, 17.815, 17.323, 17.6461, 17.6303, 17.6992, 18.3043, 18.1833]\n"
      ]
     }
    ],
    "source": [
-    "from util import extractFinalDistListFromLogDir\n",
+    "from util import extractResListFromLogDir\n",
     "\n",
-    "# logDir = 'res/baseline/log/mtsp51_baseline_30_5_1000_100_10_20211216_16_12_09'\n",
-    "# resListBaseline = extractFinalDistListFromLogDir(log_dir=logDir)\n",
+    "logDir = 'res/baseline/log/mtsp51_baseline_30_5_1000_100_10_20211216_16_12_09'\n",
+    "resListBaseline = extractResListFromLogDir(log_dir=logDir, label='distance')\n",
+    "timeListBaseline = extractResListFromLogDir(log_dir=logDir, label='runtime')\n",
     "\n",
-    "# print(resListBaseline)"
+    "print(resListBaseline)\n",
+    "print(timeListBaseline)"
    ]
   },
   {
@@ -1809,7 +1721,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:mtsp]",
+   "display_name": "Python [conda env:mtsp] *",
    "language": "python",
    "name": "conda-env-mtsp-py"
   },
