[WRAP] Wraps up the necessities

--- a/GA4mTSP.ipynb
+++ b/GA4mTSP.ipynb
@@ -1537,14 +1537,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. xxx Algorithm (to compare with baseline)"
+    "## 2. JingranGA Algorithm (to compare with baseline)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check another file: xxx.ipynb"
+    "As an example, run JingranGA on the `pr226` instance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--> Running ID = 1\n",
+      "dataset loaded. the path of dataset instances/pr226.txtnum_of_cal_pairs should not larger than 4520000population initfinished, time 17.18270254135132 secondsgeneration 1102, num_of_cal_pairs 4519500, best distance 546858.0857410419\n",
+      "best route: [[16, 50, 22, 21, 20, 18, 65, 53, 59, 60, 133, 203, 205, 197, 168, 169, 167, 181, 185, 188, 178, 174, 180, 217, 213, 216, 208, 207, 140, 99, 81, 79, 82, 1], [72, 44, 34, 29, 28, 52, 131, 124, 223, 224, 218, 98, 93, 114, 106, 109, 128, 130, 129, 120, 137, 91, 101, 89, 15, 17, 14, 8, 13, 3, 4, 2, 77, 80, 83, 85, 118, 125, 121, 122, 134, 212], [63, 173, 158, 155, 161, 159, 156, 157, 165, 147, 145, 96, 40, 94, 199, 211, 219, 221, 123, 115, 31, 45, 48, 54, 12, 71, 215, 214, 202, 204, 206, 210, 209, 198, 194, 191, 162, 160, 164, 163, 150, 151, 152, 153, 92, 103, 104, 108, 57, 61, 58], [67, 55, 51, 69, 74, 78, 105, 146, 143, 136, 148, 139, 149, 141, 138, 42, 33, 27, 23, 62, 56, 127, 132, 186, 187, 172, 184, 222, 220, 225, 189, 171, 177, 195, 196, 192, 193, 200, 201, 190, 183, 182, 135], [64, 100, 88, 41, 38, 37, 39, 170, 166, 142, 43, 46, 26, 24, 19, 116, 102, 111, 49, 30, 47, 32, 179, 176, 175, 154, 90, 36, 25, 35, 66, 68, 7, 11, 110, 113, 117, 86, 97, 95, 87, 144, 126, 119, 107, 112, 10, 9, 70, 84, 73, 76, 75, 5, 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python main.py -d instances/pr226.txt -ga JingranGA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For more details, refer to `JingranGA.ipynb`."
    ]
   },
   {
