[IPYNB] Updates GA4mTSP.ipynb

--- a/GA4mTSP.ipynb
+++ b/GA4mTSP.ipynb
@@ -1570,7 +1570,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For more details, refer to `JingranGA.ipynb`."
+    "For more details, refer to `JingranGA.ipynb`. The log files of JingranGA are really huge, thus we exclude them here."
    ]
   },
   {
