--- a/GA4mTSP.ipynb
+++ b/GA4mTSP.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -36,223 +36,223 @@
       "> Loading cities from instances/mtsp51.txt\n",
       "\t>> 51 cities in total to be loaded\n",
       "> 51 cities loaded from instances/mtsp51.txt\n",
-      "> Initial distance: 1504.379847\n",
+      "> Initial distance: 1474.351761\n",
       "> Starting running GA.\n",
       "\t>> cities = 51, salesmen = 5\n",
       "\t>> Generations = 1000, PopulationSize = 100, TournamentSize = 10\n",
       "# Generation Distance\n",
-      "% 1 1493.482674\n",
-      "% 2 1415.022659\n",
-      "% 3 1343.506094\n",
-      "% 4 1334.717735\n",
-      "% 5 1276.647011\n",
-      "% 6 1258.340652\n",
-      "% 7 1138.833838\n",
-      "% 8 1168.934858\n",
-      "% 9 1159.689399\n",
-      "% 10 1213.074392\n",
-      "% 11 1190.657504\n",
-      "% 12 1180.597209\n",
-      "% 13 1169.495065\n",
-      "% 14 1183.981878\n",
-      "% 15 1131.855049\n",
-      "% 16 1141.053187\n",
-      "% 17 1104.442625\n",
-      "% 18 1148.249560\n",
-      "% 19 1080.000847\n",
-      "% 20 1022.202012\n",
-      "% 21 1034.991293\n",
-      "% 22 1030.927119\n",
-      "% 23 1026.250273\n",
-      "% 24 1026.151463\n",
-      "% 25 1016.395096\n",
-      "% 26 996.818111\n",
-      "% 27 1006.846914\n",
-      "% 28 971.687255\n",
-      "% 29 989.380201\n",
-      "% 30 969.202524\n",
-      "% 31 1012.978964\n",
-      "% 32 1039.002877\n",
-      "% 33 1035.261644\n",
-      "% 34 1048.301804\n",
-      "% 35 1025.917716\n",
-      "% 36 1035.532136\n",
-      "% 37 1018.636673\n",
-      "% 38 974.285949\n",
-      "% 39 995.727776\n",
-      "% 40 997.478754\n",
-      "% 41 998.627532\n",
-      "% 42 939.108578\n",
-      "% 43 939.269565\n",
-      "% 44 962.842217\n",
-      "% 45 961.411038\n",
-      "% 46 978.564817\n",
-      "% 47 984.607439\n",
-      "% 48 963.078292\n",
-      "% 49 985.550948\n",
-      "% 50 1025.947038\n",
-      "% 51 973.120374\n",
-      "% 52 992.528739\n",
-      "% 53 1003.421397\n",
-      "% 54 998.506332\n",
-      "% 55 1038.917918\n",
-      "% 56 996.617675\n",
-      "% 57 1006.924453\n",
-      "% 58 1028.544803\n",
-      "% 59 1060.461311\n",
-      "% 60 1042.432172\n",
-      "% 61 1045.838630\n",
-      "% 62 1042.231268\n",
-      "% 63 1055.561051\n",
-      "% 64 1056.037960\n",
-      "% 65 1061.798261\n",
-      "% 66 1062.689706\n",
-      "% 67 1056.740899\n",
-      "% 68 1042.146309\n",
-      "% 69 1061.690559\n",
-      "% 70 1027.117385\n",
-      "% 71 1048.285729\n",
-      "% 72 1011.827701\n",
-      "% 73 991.044391\n",
-      "% 74 1030.385414\n",
-      "% 75 1042.585238\n",
-      "% 76 1037.923571\n",
-      "% 77 1075.869177\n",
-      "% 78 1080.046523\n",
-      "% 79 1064.040754\n",
-      "% 80 1098.293855\n",
-      "% 81 1101.634012\n",
-      "% 82 1061.868180\n",
-      "% 83 1073.400920\n",
-      "% 84 1050.841611\n",
-      "% 85 1039.960477\n",
-      "% 86 1032.154519\n",
-      "% 87 1033.239848\n",
-      "% 88 1036.525689\n",
-      "% 89 1033.687530\n",
-      "% 90 1057.078125\n",
-      "% 91 1007.708169\n",
-      "% 92 1013.002939\n",
-      "% 93 1037.629857\n",
-      "% 94 1038.404912\n",
-      "% 95 1032.320498\n",
-      "% 96 1026.618705\n",
-      "% 97 1021.323440\n",
-      "% 98 1054.438826\n",
-      "% 99 1014.761411\n",
-      "% 100 1009.548146\n",
-      "% 101 969.698317\n",
-      "% 102 1000.574812\n",
-      "% 103 1050.379707\n",
-      "% 104 1070.472283\n",
-      "% 105 1067.572808\n",
-      "% 106 1103.243825\n",
-      "% 107 1118.512555\n",
-      "% 108 1107.461895\n",
-      "% 109 1119.890337\n",
-      "% 110 1116.205446\n",
-      "% 111 1112.210755\n",
-      "% 112 1063.717347\n",
-      "% 113 1073.792366\n",
-      "% 114 1089.677547\n",
-      "% 115 1070.299695\n",
-      "% 116 1053.734311\n",
-      "% 117 1033.537132\n",
-      "% 118 1050.218785\n",
-      "% 119 1045.523912\n",
-      "% 120 1085.638285\n",
-      "% 121 1124.064079\n",
-      "% 122 1067.597783\n",
-      "% 123 1075.262653\n",
-      "% 124 1091.873281\n",
-      "% 125 1122.792265\n",
-      "% 126 1167.575845\n",
-      "% 127 1149.266413\n",
-      "% 128 1153.948461\n",
-      "% 129 1127.896611\n",
-      "% 130 1069.456293\n",
-      "% 131 1038.796982\n",
-      "% 132 1036.339336\n",
-      "% 133 1018.471597\n",
-      "% 134 1022.255714\n",
-      "% 135 1044.941088\n",
-      "% 136 1055.329503\n",
-      "% 137 1039.870660\n",
-      "% 138 1051.109238\n",
-      "% 139 997.167539\n",
-      "% 140 1000.628600\n",
-      "% 141 985.201366\n",
-      "% 142 969.566345\n",
-      "% 143 969.631653\n",
-      "% 144 1006.577748\n",
-      "% 145 1013.314643\n",
-      "% 146 1026.736893\n",
-      "% 147 1011.884483\n",
-      "% 148 986.633469\n",
-      "% 149 995.112063\n",
-      "% 150 1035.290485\n",
-      "% 151 1051.183087\n",
-      "% 152 1062.101098\n",
-      "% 153 1077.900461\n",
-      "% 154 1035.065960\n",
-      "% 155 1064.679346\n",
-      "% 156 1029.312054\n",
-      "% 157 995.045271\n",
-      "% 158 989.096313\n",
-      "% 159 995.275920\n",
-      "% 160 1012.252085\n",
-      "% 161 1024.380959\n",
-      "% 162 1021.363619\n",
-      "% 163 1029.339889\n",
-      "% 164 1038.478313\n",
-      "% 165 1011.488201\n",
-      "% 166 1039.186934\n",
-      "% 167 991.614875\n",
-      "% 168 982.565204\n",
-      "% 169 1051.223365\n",
-      "% 170 1038.070942\n",
-      "% 171 1025.243637\n",
-      "% 172 989.382301\n",
-      "% 173 980.532073\n",
-      "% 174 1012.464436\n",
-      "% 175 982.845036\n",
-      "% 176 995.028477\n",
-      "% 177 990.555982\n",
-      "% 178 978.462926\n",
-      "% 179 951.181211\n",
-      "% 180 942.872616\n",
-      "% 181 926.633836\n",
-      "% 182 912.301307\n",
-      "% 183 904.873720\n",
-      "% 184 933.533265\n",
-      "% 185 959.588998\n",
-      "% 186 956.050031\n",
-      "% 187 937.768897\n",
-      "% 188 939.328979\n",
-      "% 189 910.049293\n",
-      "% 190 906.312199\n",
-      "% 191 956.779525\n",
-      "% 192 964.085287\n",
-      "% 193 983.008698\n",
-      "% 194 983.185401\n",
-      "% 195 950.285130\n",
-      "% 196 915.676955\n",
-      "% 197 933.157296\n",
-      "% 198 957.079857\n",
-      "% 199 987.471487\n",
-      "% 200 1006.255699\n",
-      "% 201 961.709026\n",
-      "% 202 966.808465\n",
-      "% 203 944.587577\n",
-      "> Finished 203 generations with 1016180 distance calculations. GA Runtime = 17.7183 sec\n",
-      "> Final distance: 904.873720\n",
+      "% 1 1368.456147\n",
+      "% 2 1378.363794\n",
+      "% 3 1312.693613\n",
+      "% 4 1303.866101\n",
+      "% 5 1285.894671\n",
+      "% 6 1241.413479\n",
+      "% 7 1242.272361\n",
+      "% 8 1212.894964\n",
+      "% 9 1232.607073\n",
+      "% 10 1191.044600\n",
+      "% 11 1173.631541\n",
+      "% 12 1169.459457\n",
+      "% 13 1164.650865\n",
+      "% 14 1210.811897\n",
+      "% 15 1178.911513\n",
+      "% 16 1152.928731\n",
+      "% 17 1139.231058\n",
+      "% 18 1118.352580\n",
+      "% 19 1122.107685\n",
+      "% 20 1125.884237\n",
+      "% 21 1132.402382\n",
+      "% 22 1125.689426\n",
+      "% 23 1108.851812\n",
+      "% 24 1112.747582\n",
+      "% 25 1063.384525\n",
+      "% 26 1105.524920\n",
+      "% 27 1084.469188\n",
+      "% 28 1087.115954\n",
+      "% 29 1090.883835\n",
+      "% 30 1087.749592\n",
+      "% 31 1112.175074\n",
+      "% 32 1130.875952\n",
+      "% 33 1118.080257\n",
+      "% 34 1160.593096\n",
+      "% 35 1109.152939\n",
+      "% 36 1070.898191\n",
+      "% 37 1063.246457\n",
+      "% 38 1023.872068\n",
+      "% 39 1056.552402\n",
+      "% 40 1018.570442\n",
+      "% 41 1034.285220\n",
+      "% 42 1039.240983\n",
+      "% 43 1041.631296\n",
+      "% 44 996.450147\n",
+      "% 45 1002.628038\n",
+      "% 46 1043.868656\n",
+      "% 47 1029.907198\n",
+      "% 48 1033.028819\n",
+      "% 49 1089.725481\n",
+      "% 50 1044.091205\n",
+      "% 51 1034.958958\n",
+      "% 52 1040.960466\n",
+      "% 53 1038.809558\n",
+      "% 54 1073.992276\n",
+      "% 55 1069.995664\n",
+      "% 56 1006.351845\n",
+      "% 57 1026.397830\n",
+      "% 58 1041.258561\n",
+      "% 59 1048.393404\n",
+      "% 60 997.283002\n",
+      "% 61 1007.865602\n",
+      "% 62 1007.135845\n",
+      "% 63 999.419980\n",
+      "% 64 984.586845\n",
+      "% 65 1003.332138\n",
+      "% 66 1023.423413\n",
+      "% 67 1016.281362\n",
+      "% 68 988.557317\n",
+      "% 69 1010.317793\n",
+      "% 70 996.344379\n",
+      "% 71 994.929821\n",
+      "% 72 1038.678821\n",
+      "% 73 990.998601\n",
+      "% 74 1002.874103\n",
+      "% 75 1041.987084\n",
+      "% 76 1043.627001\n",
+      "% 77 1041.613931\n",
+      "% 78 1047.723410\n",
+      "% 79 1026.224501\n",
+      "% 80 997.416883\n",
+      "% 81 1002.304707\n",
+      "% 82 1000.398179\n",
+      "% 83 1030.278919\n",
+      "% 84 1041.839378\n",
+      "% 85 1019.807086\n",
+      "% 86 1027.366109\n",
+      "% 87 993.892580\n",
+      "% 88 1006.297878\n",
+      "% 89 1005.099246\n",
+      "% 90 1047.764015\n",
+      "% 91 1032.683450\n",
+      "% 92 1050.026531\n",
+      "% 93 1047.128282\n",
+      "% 94 1051.953573\n",
+      "% 95 1061.159863\n",
+      "% 96 1060.803687\n",
+      "% 97 1099.661781\n",
+      "% 98 1077.806852\n",
+      "% 99 1101.608401\n",
+      "% 100 1109.934380\n",
+      "% 101 1029.802749\n",
+      "% 102 1083.625231\n",
+      "% 103 1039.801338\n",
+      "% 104 1045.702644\n",
+      "% 105 1077.581359\n",
+      "% 106 1057.040673\n",
+      "% 107 1072.270655\n",
+      "% 108 1039.013706\n",
+      "% 109 1043.543366\n",
+      "% 110 1067.573098\n",
+      "% 111 1080.350290\n",
+      "% 112 1074.135995\n",
+      "% 113 1070.088530\n",
+      "% 114 1014.663970\n",
+      "% 115 1019.393887\n",
+      "% 116 1013.471569\n",
+      "% 117 1046.559732\n",
+      "% 118 1030.572047\n",
+      "% 119 1043.109528\n",
+      "% 120 1074.541049\n",
+      "% 121 1040.842741\n",
+      "% 122 951.533872\n",
+      "% 123 1007.788905\n",
+      "% 124 1003.038357\n",
+      "% 125 1020.018834\n",
+      "% 126 1055.834554\n",
+      "% 127 1044.066995\n",
+      "% 128 1051.119404\n",
+      "% 129 1068.852905\n",
+      "% 130 1090.067042\n",
+      "% 131 1075.145918\n",
+      "% 132 1069.024613\n",
+      "% 133 1075.645303\n",
+      "% 134 1123.562964\n",
+      "% 135 1056.076916\n",
+      "% 136 1100.861295\n",
+      "% 137 1109.667417\n",
+      "% 138 1058.066614\n",
+      "% 139 1022.639936\n",
+      "% 140 1043.181356\n",
+      "% 141 1027.493248\n",
+      "% 142 1081.686594\n",
+      "% 143 1028.700575\n",
+      "% 144 1024.954539\n",
+      "% 145 1017.510220\n",
+      "% 146 994.306170\n",
+      "% 147 1022.330858\n",
+      "% 148 1044.383823\n",
+      "% 149 1052.127281\n",
+      "% 150 1089.311661\n",
+      "% 151 1008.357590\n",
+      "% 152 999.344027\n",
+      "% 153 937.486279\n",
+      "% 154 996.961078\n",
+      "% 155 999.072484\n",
+      "% 156 994.138008\n",
+      "% 157 967.935109\n",
+      "% 158 1013.889395\n",
+      "% 159 995.217773\n",
+      "% 160 1006.402880\n",
+      "% 161 1005.327653\n",
+      "% 162 993.660651\n",
+      "% 163 1005.928264\n",
+      "% 164 1004.064914\n",
+      "% 165 1034.273920\n",
+      "% 166 967.791246\n",
+      "% 167 978.307309\n",
+      "% 168 977.270419\n",
+      "% 169 991.652246\n",
+      "% 170 941.366003\n",
+      "% 171 998.406030\n",
+      "% 172 918.111364\n",
+      "% 173 945.556238\n",
+      "% 174 982.440292\n",
+      "% 175 923.412016\n",
+      "% 176 983.009520\n",
+      "% 177 1006.687593\n",
+      "% 178 1037.131754\n",
+      "% 179 992.099630\n",
+      "% 180 958.195214\n",
+      "% 181 996.655842\n",
+      "% 182 956.636018\n",
+      "% 183 967.034696\n",
+      "% 184 977.574862\n",
+      "% 185 984.347696\n",
+      "% 186 985.957298\n",
+      "% 187 1026.050850\n",
+      "% 188 1032.886145\n",
+      "% 189 1064.201291\n",
+      "% 190 1016.842034\n",
+      "% 191 1053.917117\n",
+      "% 192 1016.188143\n",
+      "% 193 1046.693574\n",
+      "% 194 992.163982\n",
+      "% 195 1005.443622\n",
+      "% 196 1023.944713\n",
+      "% 197 1025.523175\n",
+      "% 198 1057.632308\n",
+      "% 199 1018.482693\n",
+      "% 200 1030.383567\n",
+      "% 201 1047.008912\n",
+      "% 202 1047.955445\n",
+      "% 203 1057.375267\n",
+      "> Finished 203 generations with 1016070 distance calculations. GA Runtime = 16.9269 sec\n",
+      "> Final distance: 918.111364\n",
       "> Final Route:\n",
-      "Truck 0 [len = 13]: 0 --> 50 --> 10 --> 37 --> 8 --> 48 --> 38 --> 32 --> 44 --> 43 --> 14 --> 26 --> 21\n",
-      "Truck 1 [len = 7]: 0 --> 49 --> 4 --> 16 --> 3 --> 9 --> 45\n",
-      "Truck 2 [len = 9]: 0 --> 6 --> 5 --> 36 --> 46 --> 17 --> 11 --> 29 --> 19\n",
-      "Truck 3 [len = 13]: 0 --> 28 --> 15 --> 33 --> 20 --> 1 --> 41 --> 40 --> 47 --> 30 --> 27 --> 2 --> 31\n",
-      "Truck 4 [len = 13]: 0 --> 25 --> 7 --> 13 --> 12 --> 39 --> 18 --> 34 --> 35 --> 23 --> 42 --> 24 --> 22\n",
-      "> Generation - Distance curve saved to fig/20211216_15_10_55.png.\n"
+      "Truck 0 [len = 16]: 0 --> 32 --> 43 --> 36 --> 16 --> 46 --> 10 --> 14 --> 44 --> 9 --> 29 --> 4 --> 49 --> 28 --> 2 --> 35\n",
+      "Truck 1 [len = 13]: 0 --> 42 --> 23 --> 24 --> 13 --> 17 --> 3 --> 40 --> 18 --> 12 --> 41 --> 39 --> 11\n",
+      "Truck 2 [len = 8]: 0 --> 31 --> 50 --> 33 --> 34 --> 19 --> 25 --> 21\n",
+      "Truck 3 [len = 11]: 0 --> 26 --> 1 --> 37 --> 8 --> 15 --> 20 --> 22 --> 30 --> 7 --> 27\n",
+      "Truck 4 [len = 7]: 0 --> 45 --> 38 --> 48 --> 5 --> 6 --> 47\n",
+      "> Generation - Distance curve saved to fig/20211222_03_52_08.png.\n"
      ]
     }
    ],
@@ -1549,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1557,8 +1557,8 @@
      "output_type": "stream",
      "text": [
       "--> Running ID = 1\n",
-      "dataset loaded. the path of dataset instances/pr226.txtnum_of_cal_pairs should not larger than 4520000population initfinished, time 17.18270254135132 secondsgeneration 1102, num_of_cal_pairs 4519500, best distance 546858.0857410419\n",
-      "best route: [[16, 50, 22, 21, 20, 18, 65, 53, 59, 60, 133, 203, 205, 197, 168, 169, 167, 181, 185, 188, 178, 174, 180, 217, 213, 216, 208, 207, 140, 99, 81, 79, 82, 1], [72, 44, 34, 29, 28, 52, 131, 124, 223, 224, 218, 98, 93, 114, 106, 109, 128, 130, 129, 120, 137, 91, 101, 89, 15, 17, 14, 8, 13, 3, 4, 2, 77, 80, 83, 85, 118, 125, 121, 122, 134, 212], [63, 173, 158, 155, 161, 159, 156, 157, 165, 147, 145, 96, 40, 94, 199, 211, 219, 221, 123, 115, 31, 45, 48, 54, 12, 71, 215, 214, 202, 204, 206, 210, 209, 198, 194, 191, 162, 160, 164, 163, 150, 151, 152, 153, 92, 103, 104, 108, 57, 61, 58], [67, 55, 51, 69, 74, 78, 105, 146, 143, 136, 148, 139, 149, 141, 138, 42, 33, 27, 23, 62, 56, 127, 132, 186, 187, 172, 184, 222, 220, 225, 189, 171, 177, 195, 196, 192, 193, 200, 201, 190, 183, 182, 135], [64, 100, 88, 41, 38, 37, 39, 170, 166, 142, 43, 46, 26, 24, 19, 116, 102, 111, 49, 30, 47, 32, 179, 176, 175, 154, 90, 36, 25, 35, 66, 68, 7, 11, 110, 113, 117, 86, 97, 95, 87, 144, 126, 119, 107, 112, 10, 9, 70, 84, 73, 76, 75, 5, 6]]\n"
+      "dataset loaded. the path of dataset instances/pr226.txtnum_of_cal_pairs should not larger than 4520000population initfinished, time 17.17039942741394 secondsgeneration 1092, num_of_cal_pairs 4519730, best distance 549477.5967092719\n",
+      "best route: [[14, 140, 142, 173, 171, 155, 154, 156, 162, 175, 178, 129, 130, 122, 215, 207, 199, 198, 202, 75, 82, 81, 73, 74, 27, 23, 29, 37, 26, 51, 53, 42, 163, 164, 172, 185, 176, 144, 146, 147, 141, 170, 181, 121, 128, 126, 220, 224, 1], [17, 88, 92, 99, 94, 105, 110, 104, 115, 112, 143, 139, 153, 150, 152, 197, 209, 123, 127, 214, 201, 205, 216, 210, 206, 180, 161, 157, 159, 166, 149, 93, 101, 148, 138, 89, 98, 54, 57, 58, 95, 134, 219, 217, 203, 200, 211, 212, 59, 35, 28, 33, 25, 18, 15, 13, 8], [7, 12, 114, 103, 102, 117, 119, 125, 39, 41, 46, 183, 188, 186, 168, 91, 100, 90, 97, 16, 5, 3, 10, 64, 179, 187, 136, 111, 107, 106, 118, 221, 223, 124, 108], [68, 63, 61, 60, 55, 62, 109, 113, 116, 120, 204, 208, 213, 76, 83, 78, 56, 21, 22, 34, 135, 133, 132, 194, 196, 189, 137, 145, 45, 43, 44, 24, 9, 2], [19, 38, 32, 20, 11, 80, 77, 79, 225, 222, 218, 190, 191, 193, 195, 66, 67, 69, 71, 182, 184, 177, 174, 165, 167, 169, 160, 158, 151, 40, 31, 30, 87, 86, 96, 192, 131, 85, 84, 72, 70, 65, 49, 47, 36, 48, 52, 50, 4, 6]]\n"
      ]
     }
    ],
